[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eff <peter.felber@turbine.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
databases = "^0.5.3"
aiosqlite = "^0.17.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
